# unit-grader

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  FUTURE_WORK.md  README.md  THIRD_PARTY_TOOLS.md  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  unit_grader.commands.html  unit_grader.config.html  unit_grader.html  unit_grader.utils.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  unit_grader.commands.doctree  unit_grader.config.doctree  unit_grader.doctree  unit_grader.utils.doctree
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/scripts/: bump_version.sh  create_release.sh
.github/workflows/: build-deploy-docs.yaml  ci.yaml  doc-deploy.yml  doc.yaml  docs-build.yml  docs.yml  jekyll-gh-pages.yml  main.yaml  release.yaml  release.yml
.github/workflows/scripts/: bump_version.sh
_sources/: modules.rst.txt  unit_grader.commands.rst.txt  unit_grader.rst.txt
docs/: conf.py  index.rst  src.rst  src.unit_grader.commands.rst  src.unit_grader.config.rst  src.unit_grader.rst  src.unit_grader.utils.rst  unit_grader.config.rst  unit_grader.utils.rst
scripts/: bump-version.sh  bump_version.sh
src/: __init__.py
src/unit_grader/: __init__.py  cli.py
src/unit_grader/commands/: __init__.py  conversion_grader.py
src/unit_grader/config/: __init__.py  data.py  enums.py
src/unit_grader/utils/: __init__.py  common.py
tests/: test_cli.py  test_common.py  test_conversion_grader.py  test_e2e.py
unit_conversion_grader/: __init__.py  cli.py
unit_conversion_grader/commands/: __init__.py  conversion_grader.py
unit_conversion_grader/config/: __init__.py  data.py  enums.py
unit_conversion_grader/utils/: __init__.py  common.py
